Fix CSS dimensions on mobile

--- a/style/book-responsive.css
+++ b/style/book-responsive.css
@@ -1,8 +1,8 @@
 @media (orientation: portrait) and (max-width: 500px),
         (orientation: landscape) and (max-height: 700px) {
     html, body, .scene {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
     }
 
     .scene {
